-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Integration
-
Fully Compatible
-
ALL
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
When featureFlagSbeFull is enabled, query stats on shard nodes incorrectly shows system variable references (like $$NOW and $$CLUSTER_TIME) in query shapes instead of the expected redacted values (?date and ?timestamp)
To repro:
```
jstest --suites=no_passthrough --additionalFeatureFlags=featureFlagSbeFull jstests/noPassthrough/query/queryStats/query_stats_system_variable_shar
ded.js | tee output.txt
```
One fix idea is to add a check in ExpressionFieldPath::serialize that will substitute system variable values when we are generating a query shape and the request was from a router. Probably some other things we need to guard this substitution with to make sure we don't affect other cases where we serialize.