SERVER-118436 Replace system variable values when generating query shapes on shards in SBE (#47184)

GitOrigin-RevId: df1feef8c0e7e6110c2adb521b5dc6afa8907061